Fixed some UI problems on mobile phones.

--- a/public/app/styles/chatroom/chat-menu.less
+++ b/public/app/styles/chatroom/chat-menu.less
@@ -56,3 +56,9 @@
 #chat-menu-header {
   display: none;
 }
+
+@media screen and (max-width: 732px) {
+  #chat-menu-cover {
+    position: fixed;
+  }
+}
