--- a/public/app/styles/chatroom/chat.less
+++ b/public/app/styles/chatroom/chat.less
@@ -114,8 +114,8 @@
   background-color: transparent;
 }
 
-.direct-chat-messages {
-  overflow-y: scroll;
+#dcs {
+  padding-top: 200px;
 }
 
 .attachment-icon-right {
@@ -241,9 +241,26 @@
   float : right;
 }
 
-#chat_body_div {
-  //overflow: hidden;
+#direct-chat-container {
+  &.latex-editor-shown {
+    #chat-body-div {
+      padding-bottom: 235px;
+    }
+    div#panel {
+      bottom: 0;
+    }
+  }
+}
+
+#chat-body-div {
   overflow-y: scroll;
+  height: 100%;
+  padding-bottom: 75px;
+}
+
+#direct-chat-container {
+  height: 100%;
+  height: 100vh;
 }
 
 div {
@@ -350,6 +367,13 @@ div {
   text-align: left;
 }
 
+#chatroom-footer {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
 /* Chat latex editor */
 #latex-editor-area {
   overflow: hidden;
@@ -364,5 +388,30 @@ div {
     height: 150px;
     width: 100%;
     font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 732px) {
+  #chatroom-footer {
+    position: fixed;
+  }
+
+  #chat-body-div {
+    position: fixed;
+    overflow-y: scroll;
+    height: 100%;
+    width: 100%;
+    bottom: 75px;
+    left: 0;
+    padding-bottom: 0;
+  }
+
+  #direct-chat-container {
+    &.latex-editor-shown {
+      #chat-body-div {
+        bottom: 235px;
+        padding-bottom: 0;
+      }
+    }
   }
 }
