--- a/public/app/styles/chatroom/global.less
+++ b/public/app/styles/chatroom/global.less
@@ -4,8 +4,15 @@
 
 @import "variables";
 
+html {
+  width: 100%;
+  height: 100%;
+}
 body {
+  width: 100%;
+  height: 100%;
   overflow: hidden;
+  background-color: white;
 }
 
 // Remove margin and padding for every element
